# rotation-logger

./: .gitignore  CMakeLists.txt  README.md  history_cmd  run_example  run_test
example/: CMakeLists.txt  main.cc
rotation-logger/: CMakeLists.txt
rotation-logger/include/: rotation-logger.hh  util.hh
rotation-logger/src/: rotation-logger.cc
script/: run_tester.cmake
test/: CMakeLists.txt  test.cc
